--- a/Thesis/inleiding.tex
+++ b/Thesis/inleiding.tex
@@ -46,8 +46,12 @@ waarvan de overeenkomstige vectoren grote similariteit vertonen met de vector va
 voorbeeld. Doordat de databank ge\"indexeerd is op de kenmerkvectoren, is het niet nodig
 om ze volledig te overlopen.
 
-\begin{figure}[tb]
-\begin{center}
+\begin{figure}[!b]
+\caption{\label{fig:cbir_en_tbir}Algemene architectuur van (a) een TBIR- en 
+(b) een CBIR-systeem.}
+%\begin{center}
+\vspace{10pt}
+\centering
 \subfigure[]{
 \includegraphics[width=10cm]{images/tbir.eps}
 \label{fig:tbir}
@@ -57,9 +61,7 @@ om ze volledig te overlopen.
 \includegraphics[width=10cm]{images/cbir.eps}
 \label{fig:cbir}
 }
-\caption{\label{fig:cbir_en_tbir}Algemene architectuur van (a) een TBIR- en 
-(b) een CBIR-systeem.}
-\end{center}
+%\end{center}
 \end{figure}
 
 \section{Similariteitsgebaseerd rangschikken van de zoekresultaten}
