--- a/Thesis/pixelgeb.tex
+++ b/Thesis/pixelgeb.tex
@@ -150,8 +150,10 @@ We kunnen dit oplossen door ofwel intermediaire beelden ofwel beeldonderdelen te
 
 \subsection{Intermediaire beelden}
 
-\begin{figure}[tbp]
-\begin{center}
+\begin{figure}[bp]
+\caption{\label{fig:intermediaire_beelden}Constructie van een resolutie-onafhankelijke similariteitsmaat door gebruik van intermediaire beelden op basis van (a) herschaling, (b) kleurkwantisatie en (c) kleurmomenten.}
+\vspace{10pt}
+\centering
 \subfigure[]{
 \includegraphics[height=3cm]{images/rescale.eps}
 \label{fig:rescale}
@@ -166,8 +168,6 @@ We kunnen dit oplossen door ofwel intermediaire beelden ofwel beeldonderdelen te
 \includegraphics[height=3cm]{images/moments.eps}
 \label{fig:moments}
 }
-\caption{\label{fig:intermediaire_beelden}Constructie van een resolutie-onafhankelijke similariteitsmaat door gebruik van intermediaire beelden op basis van (a) herschaling, (b) kleurkwantisatie en (c) kleurmomenten.}
-\end{center}
 \end{figure}
 
 De meest voor de hand liggende manier om het probleem met betrekking tot de resolutie van de beelden
@@ -303,15 +303,18 @@ die waarden.
 %De similariteiten die  
 %toegevoegd worden aan $S$ staan in het vet. 
 
-\begin{figure}[tbp]
-\begin{center}
-\includegraphics[width=10cm]{images/multires.eps}
+\begin{figure}[bp]
 \caption{\label{fig:multires}Constructie van een resolutie-onafhankelijke similariteitsmaat door gebruik van beeldonderdelen.}
-\end{center}
+\vspace{10pt}
+\centering
+\includegraphics[width=10cm]{images/multires.eps}
 \end{figure}
 
-\begin{figure}[tbp]
-\begin{center}
+\begin{figure}[!bp]
+\caption{\label{fig:multires_sim-matrices}Het pad in de similariteitsmatrix van de beelden uit 
+figuur~\ref{fig:multires} voor (a) $M(A,B)$, (b) $M(B,A)$ en (c) beide.}
+\vspace{10pt}
+\centering
 \subfigure[]{
 \includegraphics[width=0.3\textwidth]{images/multires_sim-matrix_1.eps}
 \label{fig:multires_sim-matrix_1}
@@ -324,9 +327,6 @@ die waarden.
 \includegraphics[width=0.3\textwidth]{images/multires_sim-matrix_beide.eps}
 \label{fig:multires_sim-matrix_beide}
 }
-\caption{\label{fig:multires_sim-matrices}Het pad in de similariteitsmatrix van de beelden uit 
-figuur~\ref{fig:multires} voor (a) $M(A,B)$, (b) $M(B,A)$ en (c) beide.}
-\end{center}
 \end{figure}
 
 %\begin{table}
@@ -377,7 +377,8 @@ Voor het toepassen van de vaagsimilariteitsmaten op
 intermediaire beelden of op beeldonderdelen, beschouwen we de drie manieren uit \ref{sectie:kleurbeelden_similariteitsmaten}:
 eerst omzetten naar grijswaardebeelden, 
 toepassen op de afzonderlijke kleurcomponenten en 
-de tralie-gebaseerde aanpak.
+de tralie-gebaseerde aanpak. We gebruiken het gemiddelde om de simimariteiten te aggregeren
+bij de componentsgewijze aanpak.
 
 \subsection{Resultaten van experimenten}
 
@@ -392,149 +393,58 @@ eventuele vervormingen zorgen voor slechtere performantie.
 Als we de similariteiten berekenen op intermediaire beelden van 8 pixels die 
 geconstrueerd worden met behulp van NeuQuant en Wu kwantisatie, dan bekomen we
 de meetresultaten die in figuur~\ref{fig:dom_colors_gggrs_en_cputimes} worden weergegeven.
-De maten op basis van NeuQuant geven duidelijk slechtere resultaten. Dat is wellicht te wijten
+De maten op basis van NeuQuant geven duidelijk minder goede resultaten. Dat is wellicht te wijten
 aan het feit dat NeuQuant minder geschikt is voor kwantistatie naar een zeer klein aantal 
-kleuren. Door $M_5$ componentsgewijs toe te passen bekomen we in dit geval de beste resultaten. 
+kleuren. Door $M_5$ componentsgewijs toe te passen, bekomen we in dit geval de beste resultaten. 
 Figuur~\ref{fig:results_beste_dom_colors} toont de resultaten van de component-gebaseerde aanpak
 in combinatie met Wu kwantisatie en $M_5$.
 
 Intermediaire beelden op basis van kleurmomenten leiden tot de meetresultaten uit 
 figuur \ref{fig:moments_gggrs_en_cputimes}. Hoewel het eigenlijk een zeer eenvoudige
-techniek is, blijkt hij toch verrassend goed te werken. De combinatie met $M_9$ presteert
+techniek is, blijkt hij toch verrassend goed te werken. Ook hier leidt de
+componentsgewijze aanpak tot de laagste GGGR-waarden. De combinatie met $M_9$ presteert
 deze keer het best. Figuur~\ref{fig:results_beste_moments_pixelgeb} toont de resultaten
 die we met die similariteitsmaat bekomen.
 
 In figuur~\ref{fig:multires_gggrs_en_cputimes} worden de GGGRs en de rekentijden van
 de similariteitsmaten op basis van beeldonderdelen van $8 \cdot 8$ pixels getoond.
-De combinatie van de component-gebaseerde aanpak met
+De component-gebaseerde aanpak samen met
 $M_{I3c}$ geeft daarbij de beste GGGR-waarde. Zoals blijkt uit
 figuur~\ref{fig:results_beste_multires_pixelgeb}, zijn de resultaten van die
 maat niet zo overtuigend.
 
-\subsection{Verklaringen voor observaties}
+Uit de grafieken blijkt dat we de beste resultaten bekomen bij de similariteitsmaten 
+die intermediaire beelden componentsgewijs vergelijken. Voor die maten proberen we, naast 
+het rekenkundig gemiddelde, ook nog het minimum en het product voor het aggregeren 
+van de similariteiten van de verschillende componenten. Figuur~\ref{fig:dom_colors_wu_comps_gggrs_en_cputimes}
+en figuur~\ref{fig:moments_comps_gggrs_en_cputimes} tonen de resultaten van
+die experimenten. We merken dat het minimum in bepaalde
+gevallen beter werkt. Bovendien zien we in 
+figuur~\ref{fig:results_beste_dom_colors_wu_comps_pixelgeb} en
+figuur~\ref{fig:results_beste_moments_comps_pixelgeb} dat de beelden
+die na de relevante beelden gerangschikt worden, vaak beter lijken op het voorbeeld als
+we het minimum gebruiken. Beschouw bijvoorbeeld de resultaten voor het ``grijs bootje'' 
+voorbeeld in figuur~\ref{fig:results_beste_moments_comps_pixelgeb}.
+De beelden van de grijze tas, die deel uitmaken van die resultaten, zijn intu\"itief meer correct
+dan de beelden die op dezelfde plaats gerangschikt worden in 
+figuur~\ref{fig:results_beste_moments_pixelgeb}. 
 
-Een opvallende observatie is dat de component-gebaseerde aanpak blijkbaar betere resultaten 
-geeft dan de tralie-gebaseerde. Verkeerdelijk hoge similariteiten tussen sterk verschillende 
-beelden zijn de oorzaak daarvan. Bij het vergelijken
-van beelden die niet sterk verschillen kunnen dergelijke \emph{valse positieven} niet optreden.
-Vandaar dat de tralie-gebaseerde aanpak wel goed kan presteren bij de constructie van
-kwaliteitsmaten voor beelden \cite{debaets:similariteitsmaten_voor_kleurbeelden}.
-Beschouw bijvoorbeeld twee beelden $A$ en $B$ die elk uit \'e\'en enkele pixel bestaan. De pixel 
-van $A$ is rood en die van $B$ is groen, met andere woorden: $A(0,0)=(1,0,0)$ en 
-$B(0,0)=(0,1,0)$. Er geldt dan: 
-\begin{displaymath}
-|A_1|=1 \quad |A_2|=0 \quad |A_3|=0 \qquad |B_1|=0 \quad |B_2|=1 \quad |B_3|=0 \qquad |A|=|B|=\frac{\sqrt{1}}{\sqrt{3}}
-\end{displaymath}
-met $A(p)=(A_1(p),A_2(p),A_3(p))$ en $B(p)=(B_1(p),B_2(p),B_3(p))$ voor elke $p$ uit het universum. Als we
-$\frac{0}{0} = 0$ veronderstellen, dan geeft rechtstreekse component-gebaseerde toepassing van 
-$M_5$ dus
-\begin{align*}
-\displaystyle\frac{M_5(A_1,B_1)+M_5(A_2,B_2)+M_5(A_3,B_3)}{3} 
-&= \displaystyle\frac{\frac{\min\{|A_1|,|B_1|\}}{\max\{|A_1|,|B_1|\}}+\frac{\min\{|A_2|,|B_2|\}}{\max\{|A_2|,|B_2|\}}+\frac{\min\{|A_3|,|B_3|\}}{\max\{|A_3|,|B_3|\}}}{3} \\
-&= \displaystyle\frac{\frac{0}{1}+\frac{0}{1}+0}{3} = 0
-\end{align*}
-terwijl we via de tralie-gebaseerde aanpak
-\begin{displaymath}
-M_5(A,B) = \frac{\min\{|A|,|B|\}}{\max\{|A|,|B|\}} = \frac{\scriptstyle \sqrt{1} / \sqrt{3}}{\scriptstyle \sqrt{1} / \sqrt{3}} = 1
-\end{displaymath}
-bekomen. Als $A$ en $B$ meerdere respectievelijk rode en groene pixels bevatten, dan moeten de cardinaliteiten
-vermenigvuldigd worden met het aantal pixels. We bekomen in dat geval dus dezelfde similariteiten. Zoals
-ge\"illustreerd wordt in figuur~\ref{fig:valse_positieven_M5}, manifesteert dit probleem zich ook als de 
-beelden naast de groene of rode pixels ook nog (ongeveer) evenveel beeldpunten van een zelfde kleur bevatten. 
-Voor de andere vaagsimilariteitsmaten die gebaseerd zijn op cardinaliteit, kunnen gelijkaardige redeneringen 
-gemaakt worden. De op afstand gebaseerde vaagsimilariteitsmaten ondervinden minder hinder van dit probleem. 
-Vandaar dat de tralie-gebaseerde aanpak in combinatie met
-$M_{1a}$, $M_{1b}$, $M_{1c}$, $M_{2}$ of $M_{3}$ relatief gezien iets beter werkt. 
+%\clearpage
 
-\begin{figure}[tbp]
-\begin{center}
-\subfigure[]{
-\begin{tabular}{cccccc}
-\includegraphics[width=1.5cm]{coil/beeld-18.eps} & 
-\includegraphics[width=1.5cm]{coil/beeld-54.eps} &
-\includegraphics[width=1.5cm]{coil/beeld-55.eps} &
-\includegraphics[width=1.5cm]{coil/beeld-19.eps} &
-\includegraphics[width=1.5cm]{coil/beeld-21.eps} &
-\includegraphics[width=1.5cm]{coil/beeld-57.eps} \\
-{\scriptsize 1.0} & 
-{\scriptsize 0.979455} & 
-{\scriptsize 0.954748} & 
-{\scriptsize 0.952282} & 
-{\scriptsize 0.923282} &
-{\scriptsize 0.910956} 
-\end{tabular}
-\label{fig:valse_positieven_M5}
-}
-\vspace{6pt}
-\subfigure[]{
-\begin{tabular}{cccccc}
-\includegraphics[width=1.5cm]{coil/beeld-18.eps} &
-\includegraphics[width=1.5cm]{coil/beeld-26.eps} &
-\includegraphics[width=1.5cm]{coil/beeld-29.eps} &
-\includegraphics[width=1.5cm]{coil/beeld-27.eps} &
-\includegraphics[width=1.5cm]{coil/beeld-24.eps} &
-\includegraphics[width=1.5cm]{coil/beeld-28.eps} \\
-{\scriptsize 1.0} & 
-{\scriptsize 0.999472} & 
-{\scriptsize 0.998082} & 
-{\scriptsize 0.997874} & 
-{\scriptsize 0.992790} &
-{\scriptsize 0.992584} 
-\end{tabular}
-\label{fig:valse_positieven_M8}
-}
-\caption{\label{fig:valse_positieven}Valse positieven bij het rangschikken volgens similariteit met 
-het ``rood bootje'' voorbeeld door herschaalde intermediaire beelden te vergelijken met behulp van 
-(a) $M_5$ en (b) $M_8$.}
-\end{center}
-\end{figure}
-
-We stellen ook vast dat $M_8$, $M_{8c}$, $M_{10}$, $M_{10c}$ en $M_{13}$ systematisch aanleiding
-geven tot de minst performante maten. Dat kunnen we als volgt verklaren. Stel dat $A$ en $B$
-twee beelden zijn, waarvoor $A(p) \le B(p)$ voor alle
-$p \in P$. Er geldt dan $A \cap B$ = A en ook $\min\{|A|,|B|\}=|A|$ zodat
-\begin{displaymath}
-M_8(A,B)= \frac{|A \cap B|}{\min\{|A|,|B|\}} = \frac{|A|}{|A|} = 1
-\end{displaymath}
-als $|A| \ne 0$. Hoewel $A(p) \le B(p)$ in de praktijk zelden zal gelden voor alle $p$ uit $P$, 
-is het niet uitzonderlijk dat die ongelijkheid geldt voor de meeste $p \in P$. In dergelijke 
-gevallen zal $M_8(A,B) \approx 1$, terwijl $A$ en $B$ toch 
-zeer verschillend kunnen zijn. Er treden dus opnieuw valse positieven op. Figuur~\ref{fig:valse_positieven_M8}
-illustreert dat met een concreet voorbeeld. Gelijkaardige redeneringen zijn mogelijk voor $M_{8c}$, $M_{10}$, 
-$M_{10c}$ en $M_{13}$.
-
-% We stellen ook vast dat $M_8$, $M_{8c}$, $M_{10}$, $M_{10c}$ en $M_{13}$ systematisch aanleiding
-% geven tot de minst performante maten. Dat kunnen we als volgt verklaren. Stel dat $A$ een 
-% volledig wit beeld is: $A(x)=(1,1,1)$ voor alle $x \in X$. Voor een willekeurig beeld $B$ met
-% dezelfde resolutie als $A$ geldt dan $A \cap B = B$ en ook $min\{|A|,|B|\}=|B|$, zodat:
-% $$
-% M_8(A,B) = \frac{|A \cap B|}{max\{|A|,|B|\}} = \frac{|B|}{|B|} = 1
-% $$
-% Volledig analoog vinden we voor een volledig zwart beeld $A$ en een willekeurig beeld $B$ met
-% dezelfde resolutie als $A$:
-% $$
-% M_8(A,B) = \frac{|A \cap B|}{max\{|A|,|B|\}} = \frac{|A|}{|A|} = \frac{0}{0}
-% $$
-
-Tenslotte blijkt ook nog dat de similariteitsmaten die een maat voor grijswaardebeelden 
-toepassen op de afzonderlijke kleurcomponenten, meestal aanzienlijk meer rekentijd nodig hebben. 
-Dat is niet verwonderlijk, aangezien het vergelijken daarbij grosso modo driemaal zoveel werk vereist.
-Bij de maten op basis van geconstrueerde intermediaire beelden is de rekentijd telkens even
-lang. Ook dat is logisch, vermits de zeer kleine afmetingen van de intermediaire beelden als
-gevolg hebben dat de rekentijd gedomineerd wordt door de tijd die nodig is om die 
-intermediaire beelden te genereren.
-
-%\newpage
-
-\begin{figure}[tbp]
-\begin{center}
+\afterpage{\begin{figure}[p]
+\caption{\label{fig:scaling_gggrs_en_cputimes}De GGGR-waarde en de rekentijd in ms 
+voor elk van de similariteitsmaten op basis van herschaalde beelden.}
+\centering
 \includegraphics[width=\textwidth]{plots/scaling_gggrs_en_cputimes_filled.eps}
-\caption{\label{fig:scaling_gggrs_en_cputimes}De GGGR-waarde en de gebruikte rekentijd in ms voor elk van de resolutie-onafhankelijke pixelgebaseerde similariteitsmaten op basis van herschaalde beelden.}
-\end{center}
+\vspace{1pt}
 \end{figure}
 
-\begin{figure}[tbp]
-\begin{center}
+\begin{figure}[p]
+\caption{\label{fig:results_beste_scaling}De GGR-waarde en de eerste tien resultaten voor elk 
+voorbeeld bij de similariteitsmaat die we bekomen door herschaalde beelden componentsgewijs 
+te vergelijken met behulp van $M_7$ en het gemiddelde.}
+\vspace{5pt}
+\centering
 \begin{tabular}{m{11cm} | m{3cm} |}
 \textbf{Eerste tien resultaten:} & \textbf{GGR:} \\
 \vspace{4pt}
@@ -671,12 +581,15 @@ intermediaire beelden te genereren.
 & {\scriptsize 0.15}
 \\
 \end{tabular}
-\caption{\label{fig:results_beste_scaling}De GGR-waarde en de eerste tien resultaten voor elk voorbeeld bij de resolutie-onafhankelijke similariteitsmaat die we bekomen door herschaalde beelden componentsgewijs te vergelijken met behulp van $M_7$.}
-\end{center}
+\vspace{5pt}
 \end{figure}
 
-\begin{figure}[tbp]
-\begin{center}
+\begin{figure}[p]
+\caption{\label{fig:dom_colors_gggrs_en_cputimes}De GGGR-waarde en de rekentijd in ms 
+voor elk van de similariteitsmaten die gebruik maken 
+van op basis van (a) NeuQuant en (b) Wu kwantisatie geconstrueerde intermediaire beelden.}
+\vspace{5pt}
+\centering
 \subfigure[]{
 \begin{minipage}{\textwidth}
 \includegraphics[width=\textwidth]{plots/dom_colors_neuquant_gggrs_en_cputimes_filled.eps}
@@ -691,14 +604,15 @@ intermediaire beelden te genereren.
 \end{minipage}
 \label{fig:dom_colors_wu_gggrs_en_cputimes}
 }
-\caption{\label{fig:dom_colors_gggrs_en_cputimes}De GGGR-waarde en de gebruikte rekentijd in ms 
-voor elk van de resolutie-onafhankelijke pixelgebaseerde similariteitsmaten die gebruik maken 
-van op basis van (a) NeuQuant en (b) Wu kwantisatie geconstrueerde intermediaire beelden.}
-\end{center}
 \end{figure}
 
-\begin{figure}[!p]
-\begin{center}
+\begin{figure}[p]
+\caption{\label{fig:results_beste_dom_colors}De GGR-waarde en de eerste tien resultaten voor elk 
+voorbeeld bij de similariteitsmaat die we bekomen door op basis van Wu 
+kwantisatie geconstrueerde intermediaire beelden componentsgewijs te vergelijken met behulp van 
+$M_5$ en het gemiddelde.}
+\vspace{5pt}
+\centering
 \begin{tabular}{m{11cm} | m{3cm} |}
 \textbf{Eerste tien resultaten:} & \textbf{GGR:} \\
 \vspace{4pt}
@@ -835,23 +749,30 @@ van op basis van (a) NeuQuant en (b) Wu kwantisatie geconstrueerde intermediaire
 & {\scriptsize 0.047619047619047616}
 \\
 \end{tabular}
-\caption{\label{fig:results_beste_dom_colors}De GGR-waarde en de eerste tien resultaten voor elk 
-voorbeeld bij de resolutie-onafhankelijke similariteitsmaat die we bekomen door op basis van Wu 
-kwantisatie geconstrueerde intermediaire beelden componentsgewijs te vergelijken met behulp van 
-$M_5$.}
-\end{center}
+\vspace{5pt}
 \end{figure}
 
-\begin{figure}[!t]
-\begin{center}
-\includegraphics[width=\textwidth]{plots/moments_gggrs_en_cputimes_filled.eps}
-\caption{\label{fig:moments_gggrs_en_cputimes}De GGGR-waarde en de gebruikte rekentijd in ms voor elk van de resolutie-onafhankelijke pixelgebaseerde similariteitsmaten die gebruik maken 
+\clearpage
+
+\begin{figure}[p]
+% \caption{\label{fig:moments_gggrs_en_cputimes}De GGGR-waarde en de gebruikte rekentijd in ms 
+% voor elk van de resolutie-onafhankelijke pixelgebaseerde similariteitsmaten die gebruik maken 
+% van op basis van kleurmomenten geconstrueerde intermediaire beelden.}
+\caption{\label{fig:moments_gggrs_en_cputimes}De GGGR-waarde en de rekentijd in ms
+voor elk van de similariteitsmaten die gebruik maken
 van op basis van kleurmomenten geconstrueerde intermediaire beelden.}
-\end{center}
+\centering
+\includegraphics[width=\textwidth]{plots/moments_gggrs_en_cputimes_filled.eps}
+\vspace{1pt}
 \end{figure}
 
-\begin{figure}[tbp]
-\begin{center}
+\begin{figure}[p]
+\caption{\label{fig:results_beste_moments_pixelgeb}De GGR-waarde en de eerste tien resultaten 
+voor elk voorbeeld bij de similariteitsmaat die we bekomen door op 
+basis van kleurmomenten geconstrueerde intermediaire beelden componentsgewijs te vergelijken 
+met behulp van $M_{9}$ en het gemiddelde.}
+\vspace{5pt}
+\centering
 \begin{tabular}{m{11cm} | m{3cm} |}
 \textbf{Eerste tien resultaten:} & \textbf{GGR:} \\
 \vspace{4pt}
@@ -988,21 +909,26 @@ van op basis van kleurmomenten geconstrueerde intermediaire beelden.}
 & {\scriptsize 0.06428571428571428}
 \\
 \end{tabular}
-\caption{\label{fig:results_beste_moments_pixelgeb}De GGR-waarde en de eerste tien resultaten voor elk voorbeeld bij de resolutie-onafhankelijke similariteitsmaat die we bekomen door op basis van kleurmomenten geconstrueerde intermediaire beelden componentsgewijs te vergelijken met behulp van $M_{9}$.}
-\end{center}
+\vspace{5pt}
 \end{figure}
 
+%\clearpage
 
-
-\begin{figure}[!t]
-\begin{center}
+\begin{figure}[p]
+\caption{\label{fig:multires_gggrs_en_cputimes}De GGGR-waarde en de rekentijd in ms 
+voor elk van de similariteitsmaten op basis van 
+beeldonderdelen.}
+\centering
 \includegraphics[width=\textwidth]{plots/multires_gggrs_en_cputimes_filled.eps}
-\caption{\label{fig:multires_gggrs_en_cputimes}De GGGR-waarde en de gebruikte rekentijd in ms voor elk van de resolutie-onafhankelijke pixelgebaseerde similariteitsmaten op basis van beeldonderdelen.}
-\end{center}
+\vspace{1pt}
 \end{figure}
 
-\begin{figure}[tbp]
-\begin{center}
+\begin{figure}[p]
+\caption{\label{fig:results_beste_multires_pixelgeb}De GGR-waarde en de eerste tien resultaten 
+voor elk voorbeeld bij de similariteitsmaat die we bekomen door 
+beeldonderdelen componentsgewijs te vergelijken met behulp van $M_{I3c}$ en het gemiddelde.}
+\vspace{5pt}
+\centering
 \begin{tabular}{m{11cm} | m{3cm} |}
 \textbf{Eerste tien resultaten:} & \textbf{GGR:} \\
 \vspace{4pt}
@@ -1139,6 +1065,465 @@ van op basis van kleurmomenten geconstrueerde intermediaire beelden.}
 & {\scriptsize 0.1}
 \\
 \end{tabular}
-\caption{\label{fig:results_beste_multires_pixelgeb}De GGR-waarde en de eerste tien resultaten voor elk voorbeeld bij de resolutie-onafhankelijke similariteitsmaat die we bekomen door beeldonderdelen componentsgewijs te vergelijken met behulp van $M_{I3c}$.}
-\end{center}
+\vspace{5pt}
 \end{figure}
+
+\begin{figure}[p]
+\caption{\label{fig:dom_colors_wu_comps_gggrs_en_cputimes}De GGGR-waarde en de rekentijd in ms 
+voor enkele similariteitsmaten die
+op basis van Wu kwantisatie geconstrueerde intermediaire beelden componentsgewijs vergelijken.}
+\centering
+\includegraphics[width=\textwidth]{plots/dom_colors_wu_comps_gggrs_en_cputimes_filled.eps}
+\vspace{1pt}
+\end{figure}
+
+\begin{figure}[p]
+\caption{\label{fig:results_beste_dom_colors_wu_comps_pixelgeb}De GGR-waarde en de eerste tien 
+resultaten voor elk voorbeeld bij de similariteitsmaat die we 
+bekomen door op basis van Wu kwantisatie geconstrueerde intermediaire beelden componentsgewijs 
+te vergelijken met behulp van $M_{5}$ en het minimum.}
+\vspace{5pt}
+\centering
+\begin{tabular}{m{11cm} | m{3cm} |}
+\textbf{Eerste tien resultaten:} & \textbf{GGR:} \\
+\vspace{4pt}
+\includegraphics[width=1cm]{coil/beeld-12.eps}
+\includegraphics[width=1cm]{coil/beeld-13.eps}
+\includegraphics[width=1cm]{coil/beeld-15.eps}
+\includegraphics[width=1cm]{coil/beeld-17.eps}
+\includegraphics[width=1cm]{coil/beeld-14.eps}
+\includegraphics[width=1cm]{coil/beeld-16.eps}
+\includegraphics[width=1cm]{coil/beeld-30.eps}
+\includegraphics[width=1cm]{coil/beeld-31.eps}
+\includegraphics[width=1cm]{coil/beeld-18.eps}
+\includegraphics[width=1cm]{coil/beeld-33.eps}
+& {\scriptsize 0.0}
+\\
+\includegraphics[width=1cm]{coil/beeld-18.eps}
+\includegraphics[width=1cm]{coil/beeld-20.eps}
+\includegraphics[width=1cm]{coil/beeld-23.eps}
+\includegraphics[width=1cm]{coil/beeld-22.eps}
+\includegraphics[width=1cm]{coil/beeld-21.eps}
+\includegraphics[width=1cm]{coil/beeld-19.eps}
+\includegraphics[width=1cm]{coil/beeld-30.eps}
+\includegraphics[width=1cm]{coil/beeld-61.eps}
+\includegraphics[width=1cm]{coil/beeld-60.eps}
+\includegraphics[width=1cm]{coil/beeld-62.eps}
+& {\scriptsize 0.0}
+\\
+\includegraphics[width=1cm]{coil/beeld-30.eps}
+\includegraphics[width=1cm]{coil/beeld-31.eps}
+\includegraphics[width=1cm]{coil/beeld-33.eps}
+\includegraphics[width=1cm]{coil/beeld-32.eps}
+\includegraphics[width=1cm]{coil/beeld-35.eps}
+\includegraphics[width=1cm]{coil/beeld-34.eps}
+\includegraphics[width=1cm]{coil/beeld-61.eps}
+\includegraphics[width=1cm]{coil/beeld-62.eps}
+\includegraphics[width=1cm]{coil/beeld-63.eps}
+\includegraphics[width=1cm]{coil/beeld-60.eps}
+& {\scriptsize 0.0}
+\\
+\includegraphics[width=1cm]{coil/beeld-54.eps}
+\includegraphics[width=1cm]{coil/beeld-58.eps}
+\includegraphics[width=1cm]{coil/beeld-59.eps}
+\includegraphics[width=1cm]{coil/beeld-55.eps}
+\includegraphics[width=1cm]{coil/beeld-56.eps}
+\includegraphics[width=1cm]{coil/beeld-57.eps}
+\includegraphics[width=1cm]{coil/beeld-35.eps}
+\includegraphics[width=1cm]{coil/beeld-30.eps}
+\includegraphics[width=1cm]{coil/beeld-34.eps}
+\includegraphics[width=1cm]{coil/beeld-31.eps}
+& {\scriptsize 0.0}
+\\
+\includegraphics[width=1cm]{coil/beeld-24.eps}
+\includegraphics[width=1cm]{coil/beeld-28.eps}
+\includegraphics[width=1cm]{coil/beeld-29.eps}
+\includegraphics[width=1cm]{coil/beeld-25.eps}
+\includegraphics[width=1cm]{coil/beeld-27.eps}
+\includegraphics[width=1cm]{coil/beeld-37.eps}
+\includegraphics[width=1cm]{coil/beeld-26.eps}
+\includegraphics[width=1cm]{coil/beeld-51.eps}
+\includegraphics[width=1cm]{coil/beeld-48.eps}
+\includegraphics[width=1cm]{coil/beeld-50.eps}
+& {\scriptsize 0.002380952380952381}
+\\
+\includegraphics[width=1cm]{coil/beeld-60.eps}
+\includegraphics[width=1cm]{coil/beeld-63.eps}
+\includegraphics[width=1cm]{coil/beeld-62.eps}
+\includegraphics[width=1cm]{coil/beeld-61.eps}
+\includegraphics[width=1cm]{coil/beeld-7.eps}
+\includegraphics[width=1cm]{coil/beeld-65.eps}
+\includegraphics[width=1cm]{coil/beeld-64.eps}
+\includegraphics[width=1cm]{coil/beeld-8.eps}
+\includegraphics[width=1cm]{coil/beeld-9.eps}
+\includegraphics[width=1cm]{coil/beeld-6.eps}
+& {\scriptsize 0.004761904761904762}
+\\
+\includegraphics[width=1cm]{coil/beeld-51.eps}
+\includegraphics[width=1cm]{coil/beeld-48.eps}
+\includegraphics[width=1cm]{coil/beeld-50.eps}
+\includegraphics[width=1cm]{coil/beeld-52.eps}
+\includegraphics[width=1cm]{coil/beeld-26.eps}
+\includegraphics[width=1cm]{coil/beeld-49.eps}
+\includegraphics[width=1cm]{coil/beeld-27.eps}
+\includegraphics[width=1cm]{coil/beeld-53.eps}
+\includegraphics[width=1cm]{coil/beeld-25.eps}
+\includegraphics[width=1cm]{coil/beeld-24.eps}
+& {\scriptsize 0.007142857142857143}
+\\
+\includegraphics[width=1cm]{coil/beeld-6.eps}
+\includegraphics[width=1cm]{coil/beeld-10.eps}
+\includegraphics[width=1cm]{coil/beeld-9.eps}
+\includegraphics[width=1cm]{coil/beeld-11.eps}
+\includegraphics[width=1cm]{coil/beeld-40.eps}
+\includegraphics[width=1cm]{coil/beeld-38.eps}
+\includegraphics[width=1cm]{coil/beeld-8.eps}
+\includegraphics[width=1cm]{coil/beeld-65.eps}
+\includegraphics[width=1cm]{coil/beeld-64.eps}
+\includegraphics[width=1cm]{coil/beeld-36.eps}
+& {\scriptsize 0.016666666666666666}
+\\
+\includegraphics[width=1cm]{coil/beeld-36.eps}
+\includegraphics[width=1cm]{coil/beeld-39.eps}
+\includegraphics[width=1cm]{coil/beeld-11.eps}
+\includegraphics[width=1cm]{coil/beeld-10.eps}
+\includegraphics[width=1cm]{coil/beeld-41.eps}
+\includegraphics[width=1cm]{coil/beeld-38.eps}
+\includegraphics[width=1cm]{coil/beeld-40.eps}
+\includegraphics[width=1cm]{coil/beeld-6.eps}
+\includegraphics[width=1cm]{coil/beeld-65.eps}
+\includegraphics[width=1cm]{coil/beeld-9.eps}
+& {\scriptsize 0.02619047619047619}
+\\
+\includegraphics[width=1cm]{coil/beeld-0.eps}
+\includegraphics[width=1cm]{coil/beeld-2.eps}
+\includegraphics[width=1cm]{coil/beeld-46.eps}
+\includegraphics[width=1cm]{coil/beeld-1.eps}
+\includegraphics[width=1cm]{coil/beeld-44.eps}
+\includegraphics[width=1cm]{coil/beeld-45.eps}
+\includegraphics[width=1cm]{coil/beeld-43.eps}
+\includegraphics[width=1cm]{coil/beeld-3.eps}
+\includegraphics[width=1cm]{coil/beeld-47.eps}
+\includegraphics[width=1cm]{coil/beeld-4.eps}
+& {\scriptsize 0.0380952380952381}
+\\
+\includegraphics[width=1cm]{coil/beeld-42.eps}
+\includegraphics[width=1cm]{coil/beeld-5.eps}
+\includegraphics[width=1cm]{coil/beeld-4.eps}
+\includegraphics[width=1cm]{coil/beeld-1.eps}
+\includegraphics[width=1cm]{coil/beeld-3.eps}
+\includegraphics[width=1cm]{coil/beeld-47.eps}
+\includegraphics[width=1cm]{coil/beeld-43.eps}
+\includegraphics[width=1cm]{coil/beeld-46.eps}
+\includegraphics[width=1cm]{coil/beeld-2.eps}
+\includegraphics[width=1cm]{coil/beeld-0.eps}
+& {\scriptsize 0.05714285714285714}
+\\
+\end{tabular}
+\vspace{5pt}
+\end{figure}
+
+\begin{figure}[p]
+\caption{\label{fig:moments_comps_gggrs_en_cputimes}De GGGR-waarde en de rekentijd in ms voor 
+enkele similariteitsmaten die
+op basis van kleurmomenten geconstrueerde intermediaire beelden componentsgewijs vergelijken.}
+\centering
+\includegraphics[width=\textwidth]{plots/moments_comps_gggrs_en_cputimes_filled.eps}
+\vspace{1pt}
+\end{figure}
+
+\begin{figure}[p]
+\caption{\label{fig:results_beste_moments_comps_pixelgeb}De GGR-waarde en de eerste tien 
+resultaten voor elk voorbeeld bij de similariteitsmaat die we 
+bekomen door op basis van kleurmomenten geconstrueerde intermediaire beelden componentsgewijs 
+te vergelijken met behulp van $M_{6}$ en het minimum.}
+\vspace{5pt}
+\centering
+\begin{tabular}{m{11cm} | m{3cm} |}
+\textbf{Eerste tien resultaten:} & \textbf{GGR:} \\
+\vspace{4pt}
+\includegraphics[width=1cm]{coil/beeld-12.eps}
+\includegraphics[width=1cm]{coil/beeld-13.eps}
+\includegraphics[width=1cm]{coil/beeld-16.eps}
+\includegraphics[width=1cm]{coil/beeld-15.eps}
+\includegraphics[width=1cm]{coil/beeld-17.eps}
+\includegraphics[width=1cm]{coil/beeld-14.eps}
+\includegraphics[width=1cm]{coil/beeld-32.eps}
+\includegraphics[width=1cm]{coil/beeld-33.eps}
+\includegraphics[width=1cm]{coil/beeld-31.eps}
+\includegraphics[width=1cm]{coil/beeld-30.eps}
+& {\scriptsize 0.0}
+\\
+\includegraphics[width=1cm]{coil/beeld-6.eps}
+\includegraphics[width=1cm]{coil/beeld-9.eps}
+\includegraphics[width=1cm]{coil/beeld-8.eps}
+\includegraphics[width=1cm]{coil/beeld-10.eps}
+\includegraphics[width=1cm]{coil/beeld-7.eps}
+\includegraphics[width=1cm]{coil/beeld-11.eps}
+\includegraphics[width=1cm]{coil/beeld-65.eps}
+\includegraphics[width=1cm]{coil/beeld-64.eps}
+\includegraphics[width=1cm]{coil/beeld-38.eps}
+\includegraphics[width=1cm]{coil/beeld-39.eps}
+& {\scriptsize 0.0}
+\\
+\includegraphics[width=1cm]{coil/beeld-18.eps}
+\includegraphics[width=1cm]{coil/beeld-22.eps}
+\includegraphics[width=1cm]{coil/beeld-21.eps}
+\includegraphics[width=1cm]{coil/beeld-20.eps}
+\includegraphics[width=1cm]{coil/beeld-23.eps}
+\includegraphics[width=1cm]{coil/beeld-19.eps}
+\includegraphics[width=1cm]{coil/beeld-63.eps}
+\includegraphics[width=1cm]{coil/beeld-61.eps}
+\includegraphics[width=1cm]{coil/beeld-62.eps}
+\includegraphics[width=1cm]{coil/beeld-60.eps}
+& {\scriptsize 0.0}
+\\
+\includegraphics[width=1cm]{coil/beeld-24.eps}
+\includegraphics[width=1cm]{coil/beeld-25.eps}
+\includegraphics[width=1cm]{coil/beeld-28.eps}
+\includegraphics[width=1cm]{coil/beeld-27.eps}
+\includegraphics[width=1cm]{coil/beeld-26.eps}
+\includegraphics[width=1cm]{coil/beeld-29.eps}
+\includegraphics[width=1cm]{coil/beeld-49.eps}
+\includegraphics[width=1cm]{coil/beeld-50.eps}
+\includegraphics[width=1cm]{coil/beeld-48.eps}
+\includegraphics[width=1cm]{coil/beeld-51.eps}
+& {\scriptsize 0.0}
+\\
+\includegraphics[width=1cm]{coil/beeld-30.eps}
+\includegraphics[width=1cm]{coil/beeld-33.eps}
+\includegraphics[width=1cm]{coil/beeld-31.eps}
+\includegraphics[width=1cm]{coil/beeld-32.eps}
+\includegraphics[width=1cm]{coil/beeld-34.eps}
+\includegraphics[width=1cm]{coil/beeld-35.eps}
+\includegraphics[width=1cm]{coil/beeld-62.eps}
+\includegraphics[width=1cm]{coil/beeld-61.eps}
+\includegraphics[width=1cm]{coil/beeld-63.eps}
+\includegraphics[width=1cm]{coil/beeld-60.eps}
+& {\scriptsize 0.0}
+\\
+\includegraphics[width=1cm]{coil/beeld-36.eps}
+\includegraphics[width=1cm]{coil/beeld-39.eps}
+\includegraphics[width=1cm]{coil/beeld-41.eps}
+\includegraphics[width=1cm]{coil/beeld-40.eps}
+\includegraphics[width=1cm]{coil/beeld-38.eps}
+\includegraphics[width=1cm]{coil/beeld-37.eps}
+\includegraphics[width=1cm]{coil/beeld-11.eps}
+\includegraphics[width=1cm]{coil/beeld-10.eps}
+\includegraphics[width=1cm]{coil/beeld-6.eps}
+\includegraphics[width=1cm]{coil/beeld-9.eps}
+& {\scriptsize 0.0}
+\\
+\includegraphics[width=1cm]{coil/beeld-48.eps}
+\includegraphics[width=1cm]{coil/beeld-49.eps}
+\includegraphics[width=1cm]{coil/beeld-50.eps}
+\includegraphics[width=1cm]{coil/beeld-53.eps}
+\includegraphics[width=1cm]{coil/beeld-51.eps}
+\includegraphics[width=1cm]{coil/beeld-52.eps}
+\includegraphics[width=1cm]{coil/beeld-29.eps}
+\includegraphics[width=1cm]{coil/beeld-26.eps}
+\includegraphics[width=1cm]{coil/beeld-27.eps}
+\includegraphics[width=1cm]{coil/beeld-28.eps}
+& {\scriptsize 0.0}
+\\
+\includegraphics[width=1cm]{coil/beeld-54.eps}
+\includegraphics[width=1cm]{coil/beeld-55.eps}
+\includegraphics[width=1cm]{coil/beeld-57.eps}
+\includegraphics[width=1cm]{coil/beeld-58.eps}
+\includegraphics[width=1cm]{coil/beeld-59.eps}
+\includegraphics[width=1cm]{coil/beeld-56.eps}
+\includegraphics[width=1cm]{coil/beeld-35.eps}
+\includegraphics[width=1cm]{coil/beeld-34.eps}
+\includegraphics[width=1cm]{coil/beeld-30.eps}
+\includegraphics[width=1cm]{coil/beeld-31.eps}
+& {\scriptsize 0.0}
+\\
+\includegraphics[width=1cm]{coil/beeld-60.eps}
+\includegraphics[width=1cm]{coil/beeld-63.eps}
+\includegraphics[width=1cm]{coil/beeld-61.eps}
+\includegraphics[width=1cm]{coil/beeld-62.eps}
+\includegraphics[width=1cm]{coil/beeld-64.eps}
+\includegraphics[width=1cm]{coil/beeld-65.eps}
+\includegraphics[width=1cm]{coil/beeld-7.eps}
+\includegraphics[width=1cm]{coil/beeld-8.eps}
+\includegraphics[width=1cm]{coil/beeld-9.eps}
+\includegraphics[width=1cm]{coil/beeld-6.eps}
+& {\scriptsize 0.0}
+\\
+\includegraphics[width=1cm]{coil/beeld-0.eps}
+\includegraphics[width=1cm]{coil/beeld-1.eps}
+\includegraphics[width=1cm]{coil/beeld-42.eps}
+\includegraphics[width=1cm]{coil/beeld-43.eps}
+\includegraphics[width=1cm]{coil/beeld-4.eps}
+\includegraphics[width=1cm]{coil/beeld-44.eps}
+\includegraphics[width=1cm]{coil/beeld-3.eps}
+\includegraphics[width=1cm]{coil/beeld-5.eps}
+\includegraphics[width=1cm]{coil/beeld-2.eps}
+\includegraphics[width=1cm]{coil/beeld-45.eps}
+& {\scriptsize 0.02619047619047619}
+\\
+\includegraphics[width=1cm]{coil/beeld-42.eps}
+\includegraphics[width=1cm]{coil/beeld-0.eps}
+\includegraphics[width=1cm]{coil/beeld-1.eps}
+\includegraphics[width=1cm]{coil/beeld-43.eps}
+\includegraphics[width=1cm]{coil/beeld-45.eps}
+\includegraphics[width=1cm]{coil/beeld-44.eps}
+\includegraphics[width=1cm]{coil/beeld-2.eps}
+\includegraphics[width=1cm]{coil/beeld-4.eps}
+\includegraphics[width=1cm]{coil/beeld-3.eps}
+\includegraphics[width=1cm]{coil/beeld-5.eps}
+& {\scriptsize 0.04285714285714286}
+\\
+\end{tabular}
+\vspace{5pt}
+\end{figure}
+
+\clearpage}
+
+Er zijn echter ook similariteitsmaten waarbij het minimum
+duidelijk minder goed werkt. Het product kan gezien worden als een soort van compromis
+tussen het gemiddelde en het minimum. Als het minimum slechter werkt dan het gemiddelde,
+dan zijn de resultaten van het product meestal ook minder goed dan die van het gemiddelde.
+Maar het product doet het in die gevallen doorgaans wel beter dan het minimum. Omgekeerd
+is de winst die we boeken door het gemiddelde te vervangen door het minimum vrijwel altijd
+groter dan de winst die het product oplevert.
+
+\subsection{Verklaringen voor observaties}
+
+Een opvallende observatie is dat de component-gebaseerde aanpak blijkbaar betere resultaten 
+geeft dan de tralie-gebaseerde. Verkeerdelijk hoge similariteiten tussen sterk verschillende 
+beelden zijn de oorzaak daarvan. Bij het vergelijken
+van beelden die niet sterk verschillen kunnen dergelijke \emph{valse positieven} niet optreden.
+Vandaar dat de tralie-gebaseerde aanpak wel goed kan presteren bij de constructie van
+kwaliteitsmaten voor beelden \cite{debaets:similariteitsmaten_voor_kleurbeelden}.
+Beschouw bijvoorbeeld twee beelden $A$ en $B$ die elk uit \'e\'en enkele pixel bestaan. De pixel 
+van $A$ is rood en die van $B$ is groen, met andere woorden: $A(0,0)=(1,0,0)$ en 
+$B(0,0)=(0,1,0)$. Er geldt dan: 
+\begin{displaymath}
+|A_1|=1 \quad |A_2|=0 \quad |A_3|=0 \qquad |B_1|=0 \quad |B_2|=1 \quad |B_3|=0 \qquad |A|=|B|=\frac{\sqrt{1}}{\sqrt{3}}
+\end{displaymath}
+met $A(p)=(A_1(p),A_2(p),A_3(p))$ en $B(p)=(B_1(p),B_2(p),B_3(p))$ voor elke $p$ uit het universum. Als we
+$\frac{0}{0} = 0$ veronderstellen, dan geeft rechtstreekse component-gebaseerde toepassing van 
+$M_5$ dus
+\begin{align*}
+\displaystyle\frac{M_5(A_1,B_1)+M_5(A_2,B_2)+M_5(A_3,B_3)}{3} 
+&= \displaystyle\frac{\frac{\min\{|A_1|,|B_1|\}}{\max\{|A_1|,|B_1|\}}+\frac{\min\{|A_2|,|B_2|\}}{\max\{|A_2|,|B_2|\}}+\frac{\min\{|A_3|,|B_3|\}}{\max\{|A_3|,|B_3|\}}}{3} \\
+&= \displaystyle\frac{\frac{0}{1}+\frac{0}{1}+0}{3} = 0
+\end{align*}
+terwijl we via de tralie-gebaseerde aanpak
+\begin{displaymath}
+M_5(A,B) = \frac{\min\{|A|,|B|\}}{\max\{|A|,|B|\}} = \frac{\scriptstyle \sqrt{1} / \sqrt{3}}{\scriptstyle \sqrt{1} / \sqrt{3}} = 1
+\end{displaymath}
+bekomen. Als $A$ en $B$ meerdere respectievelijk rode en groene pixels bevatten, dan moeten de cardinaliteiten
+vermenigvuldigd worden met het aantal pixels. We bekomen in dat geval dus dezelfde similariteiten. Zoals
+ge\"illustreerd wordt in figuur~\ref{fig:valse_positieven_M5}, 
+\begin{figure}[!bp]
+\caption{\label{fig:valse_positieven}Valse positieven bij het rangschikken volgens similariteit met 
+het ``rood bootje'' voorbeeld door herschaalde intermediaire beelden te vergelijken met behulp van 
+(a) $M_5$ en (b) $M_8$.}
+\vspace{10pt}
+\centering
+\subfigure[]{
+\begin{tabular}{cccccc}
+\includegraphics[width=1.5cm]{coil/beeld-18.eps} & 
+\includegraphics[width=1.5cm]{coil/beeld-54.eps} &
+\includegraphics[width=1.5cm]{coil/beeld-55.eps} &
+\includegraphics[width=1.5cm]{coil/beeld-19.eps} &
+\includegraphics[width=1.5cm]{coil/beeld-21.eps} &
+\includegraphics[width=1.5cm]{coil/beeld-57.eps} \\
+{\scriptsize 1.0} & 
+{\scriptsize 0.979455} & 
+{\scriptsize 0.954748} & 
+{\scriptsize 0.952282} & 
+{\scriptsize 0.923282} &
+{\scriptsize 0.910956} 
+\end{tabular}
+\label{fig:valse_positieven_M5}
+}
+\vspace{6pt}
+\subfigure[]{
+\begin{tabular}{cccccc}
+\includegraphics[width=1.5cm]{coil/beeld-18.eps} &
+\includegraphics[width=1.5cm]{coil/beeld-26.eps} &
+\includegraphics[width=1.5cm]{coil/beeld-29.eps} &
+\includegraphics[width=1.5cm]{coil/beeld-27.eps} &
+\includegraphics[width=1.5cm]{coil/beeld-24.eps} &
+\includegraphics[width=1.5cm]{coil/beeld-28.eps} \\
+{\scriptsize 1.0} & 
+{\scriptsize 0.999472} & 
+{\scriptsize 0.998082} & 
+{\scriptsize 0.997874} & 
+{\scriptsize 0.992790} &
+{\scriptsize 0.992584} 
+\end{tabular}
+\label{fig:valse_positieven_M8}
+}
+\end{figure}
+manifesteert dit probleem zich ook als de 
+beelden naast de groene of rode pixels ook nog (ongeveer) evenveel beeldpunten van een zelfde kleur bevatten. 
+Voor de andere vaagsimilariteitsmaten die gebaseerd zijn op cardinaliteit, kunnen gelijkaardige redeneringen 
+gemaakt worden. De op afstand gebaseerde vaagsimilariteitsmaten ondervinden minder hinder van dit probleem. 
+Vandaar dat de tralie-gebaseerde aanpak in combinatie met
+$M_{1a}$, $M_{1b}$, $M_{1c}$, $M_{2}$ of $M_{3}$ relatief gezien iets beter werkt.
+
+We stellen ook vast dat $M_8$, $M_{8c}$, $M_{10}$, $M_{10c}$ en $M_{13}$ systematisch aanleiding
+geven tot de minst performante maten. Dat kunnen we als volgt verklaren. Stel dat $A$ en $B$
+twee beelden zijn, waarvoor $A(p) \le B(p)$ voor alle
+$p \in P$. Er geldt dan $A \cap B$ = A en ook $\min\{|A|,|B|\}=|A|$ zodat
+\begin{displaymath}
+M_8(A,B)= \frac{|A \cap B|}{\min\{|A|,|B|\}} = \frac{|A|}{|A|} = 1
+\end{displaymath}
+als $|A| \ne 0$. Hoewel $A(p) \le B(p)$ in de praktijk zelden zal gelden voor alle $p$ uit $P$, 
+is het niet uitzonderlijk dat die ongelijkheid geldt voor de meeste $p \in P$. In dergelijke 
+gevallen zal $M_8(A,B) \approx 1$, terwijl $A$ en $B$ toch 
+zeer verschillend kunnen zijn. Er treden dus opnieuw valse positieven op. Figuur~\ref{fig:valse_positieven_M8}
+illustreert dat met een concreet voorbeeld. Gelijkaardige redeneringen zijn mogelijk voor $M_{8c}$, $M_{10}$, 
+$M_{10c}$ en $M_{13}$.
+
+% We stellen ook vast dat $M_8$, $M_{8c}$, $M_{10}$, $M_{10c}$ en $M_{13}$ systematisch aanleiding
+% geven tot de minst performante maten. Dat kunnen we als volgt verklaren. Stel dat $A$ een 
+% volledig wit beeld is: $A(x)=(1,1,1)$ voor alle $x \in X$. Voor een willekeurig beeld $B$ met
+% dezelfde resolutie als $A$ geldt dan $A \cap B = B$ en ook $min\{|A|,|B|\}=|B|$, zodat:
+% $$
+% M_8(A,B) = \frac{|A \cap B|}{max\{|A|,|B|\}} = \frac{|B|}{|B|} = 1
+% $$
+% Volledig analoog vinden we voor een volledig zwart beeld $A$ en een willekeurig beeld $B$ met
+% dezelfde resolutie als $A$:
+% $$
+% M_8(A,B) = \frac{|A \cap B|}{max\{|A|,|B|\}} = \frac{|A|}{|A|} = \frac{0}{0}
+% $$
+
+In \ref{sectie:kleurbeelden_similariteitsmaten} hebben we reeds opgemerkt dat de 
+component-gebaseerde aanpak strengere similariteitsmaten oplevert indien de
+aggregatie gebeurt met behulp van het minimum in plaats van het gemiddelde. Bij het
+minimum zijn hoge similariteiten immers enkel mogelijk als alle componenten
+zeer similair zijn. Ook bij het product is dat het geval. Als voorbeeld passen we
+$M_5$ opnieuw toe op twee beelden $A$ en $B$ die slechts \'e\'en enkele pixel bevatten. Deze
+keer kiezen we echter $A(0,0)=(1,0,1)$ en $B(0,0)=(1,1,1)$. Met andere woorden: $A$ is paars 
+(magenta) en $B$ is wit. Er geldt dan:
+\begin{displaymath}
+|A_1|=1 \quad |A_2|=0 \quad |A_3|=1 \qquad |B_1|=1 \quad |B_2|=1 \quad |B_3|=1
+\end{displaymath}
+en dus
+\begin{displaymath}
+M_5(A_1,B_1)=\frac{\min\{|A_1|,|B_1|\}}{\max\{|A_1|,|B_1|\}}=\frac{1}{1}=1 \qquad 
+%M_5(A_2,B_2)=\frac{\min\{|A_2|,|B_2|\}}{\max\{|A_2|,|B_2|\}}=\frac{0}{1}=0 \quad
+%M_5(A_3,B_3)=\frac{\min\{|A_3|,|B_3|\}}{\max\{|A_3|,|B_3|\}}=\frac{1}{1}=1
+M_5(A_2,B_2)=\frac{0}{1}=0 \qquad M_5(A_3,B_3)=\frac{1}{1}=1
+\end{displaymath}
+waarbij ook hier $A(p)=(A_1(p),A_2(p),A_3(p))$ en $B(p)=(B_1(p),B_2(p),B_3(p))$ voor elke $p \in P$.
+Met behulp van het minimum en het product bekomen we dan $\min\{1,0,1\}=\min\{0,1\}=0$
+en $1 \cdot 0 \cdot 1 = 0$. Het gemiddelde daarentegen geeft $(1+0+1)/3=2/3$, wat
+een te hoge waarde is vermits $A$ en $B$ eigenlijk helemaal niet similair zijn.
+Er bestaan dus inderdaad gevallen waarbij het minimum en het product beter presteren dan 
+het gemiddelde.
+
+Tenslotte blijkt ook nog dat de similariteitsmaten die een maat voor grijswaardebeelden 
+toepassen op de afzonderlijke kleurcomponenten, meestal aanzienlijk meer rekentijd nodig hebben. 
+Dat is niet verwonderlijk, aangezien het vergelijken daarbij grosso modo driemaal zoveel werk vereist.
+Bij de maten op basis van geconstrueerde intermediaire beelden is de rekentijd telkens even
+lang. Ook dat is logisch, vermits de zeer kleine afmetingen van de intermediaire beelden als
+gevolg hebben dat de rekentijd gedomineerd wordt door de tijd die nodig is om die 
+intermediaire beelden te genereren.
+
+\subsection{Conclusie}
